--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -147,9 +147,11 @@
   <ItemGroup>
     <ClCompile Include="Source\Car.cpp" />
     <ClCompile Include="Source\CustomEntity.cpp" />
+    <ClCompile Include="Source\GarageInventory.cpp" />
     <ClCompile Include="Source\InteractionStack.cpp" />
     <ClCompile Include="Source\Inventory.cpp" />
     <ClCompile Include="Source\Item.cpp" />
+    <ClCompile Include="Source\ItemInventory.cpp" />
     <ClCompile Include="Source\NPC.cpp" />
     <ClCompile Include="Source\Player.cpp" />
     <ClCompile Include="Source\Scene.cpp" />
@@ -174,11 +176,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Car.h" />
+    <ClInclude Include="Source\GarageInventory.h" />
     <ClInclude Include="Source\Interactions.h" />
     <ClInclude Include="Source\CustomEntity.h" />
     <ClInclude Include="Source\InteractionStack.h" />
     <ClInclude Include="Source\Inventory.h" />
     <ClInclude Include="Source\Item.h" />
+    <ClInclude Include="Source\ItemInventory.h" />
     <ClInclude Include="Source\NPC.h" />
     <ClInclude Include="Source\EntityDataHandler.h" />
     <ClInclude Include="Source\MeshHandler.h" />
