--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -1,76 +1,220 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Source\Car.cpp" />
-    <ClCompile Include="Source\CustomEntity.cpp" />
-    <ClCompile Include="Source\GarageInventory.cpp" />
-    <ClCompile Include="Source\InteractionStack.cpp" />
-    <ClCompile Include="Source\Inventory.cpp" />
-    <ClCompile Include="Source\Item.cpp" />
-    <ClCompile Include="Source\ItemInventory.cpp" />
-    <ClCompile Include="Source\NPC.cpp" />
-    <ClCompile Include="Source\Player.cpp" />
-    <ClCompile Include="Source\Scene.cpp" />
-    <ClCompile Include="Source\MeshHandler.cpp" />
-    <ClCompile Include="Source\Entity.cpp" />
-    <ClCompile Include="Source\EntityManager.cpp" />
-    <ClCompile Include="Source\HitBox.cpp" />
-    <ClCompile Include="Source\Position3D.cpp" />
-    <ClCompile Include="Source\LoadOBJ.cpp" />
-    <ClCompile Include="Source\LoadTGA.cpp" />
-    <ClCompile Include="Source\Mesh.cpp" />
-    <ClCompile Include="Source\MeshBuilder.cpp" />
-    <ClCompile Include="Source\Application.cpp" />
-    <ClCompile Include="Source\main.cpp" />
-    <ClCompile Include="Source\shader.cpp" />
-    <ClCompile Include="Source\Utility.cpp" />
-    <ClCompile Include="Source\Weapon.cpp" />
-    <ClCompile Include="Source\WeaponInventory.cpp" />
-    <ClCompile Include="Source\WorldObject.cpp" />
-    <ClCompile Include="Source\SceneAssignment2.cpp" />
-    <ClCompile Include="Source\Game.cpp" />
-    <ClCompile Include="Source\Camera.cpp" />
-    <ClCompile Include="Source\UIManager.cpp" />
-    <ClCompile Include="Source\Button.cpp" />
-    <ClCompile Include="Source\Text.cpp" />
+    <ClCompile Include="Source\Car.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\CustomEntity.cpp" >
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\GarageInventory.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\InteractionStack.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Inventory.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Item.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\ItemInventory.cpp" >
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\NPC.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Player.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Scene.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\MeshHandler.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Entity.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\EntityManager.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\HitBox.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Position3D.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\LoadOBJ.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\LoadTGA.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Mesh.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\MeshBuilder.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Application.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\main.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\shader.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Utility.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Weapon.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\WeaponInventory.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\WorldObject.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\SceneAssignment2.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Game.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Camera.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\UIManager.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Button.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Text.cpp" >
+        <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ButtonManager.cpp">
+        <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\Car.h" />
-    <ClInclude Include="Source\GarageInventory.h" />
-    <ClInclude Include="Source\Interactions.h" />
-    <ClInclude Include="Source\CustomEntity.h" />
-    <ClInclude Include="Source\InteractionStack.h" />
-    <ClInclude Include="Source\Inventory.h" />
-    <ClInclude Include="Source\Item.h" />
-    <ClInclude Include="Source\ItemInventory.h" />
-    <ClInclude Include="Source\NPC.h" />
-    <ClInclude Include="Source\EntityDataHandler.h" />
-    <ClInclude Include="Source\MeshHandler.h" />
-    <ClInclude Include="Source\Entity.h" />
-    <ClInclude Include="Source\EntityManager.h" />
-    <ClInclude Include="Source\HitBox.h" />
-    <ClInclude Include="Source\Player.h" />
-    <ClInclude Include="Source\Position3D.h" />
-    <ClInclude Include="Source\Light.h" />
-    <ClInclude Include="Source\LoadOBJ.h" />
-    <ClInclude Include="Source\LoadTGA.h" />
-    <ClInclude Include="Source\Material.h" />
-    <ClInclude Include="Source\Mesh.h" />
-    <ClInclude Include="Source\MeshBuilder.h" />
-    <ClInclude Include="Source\Application.h" />
-    <ClInclude Include="Source\Scene.h" />
-    <ClInclude Include="Source\shader.hpp" />
-    <ClInclude Include="Source\Utility.h" />
-    <ClInclude Include="Source\Vertex.h" />
-    <ClInclude Include="Source\Weapon.h" />
-    <ClInclude Include="Source\WeaponInventory.h" />
-    <ClInclude Include="Source\WorldObject.h" />
-    <ClInclude Include="Source\SceneAssignment2.h" />
-    <ClInclude Include="Source\Game.h" />
-    <ClInclude Include="Source\Camera.h" />
-    <ClInclude Include="Source\UIManager.h" />
-    <ClInclude Include="Source\Button.h" />
-    <ClInclude Include="Source\Text.h" />
-    <ClInclude Include="Source\UIItem.h" />
+    <ClInclude Include="Source\Car.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GarageInventory.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Interactions.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\CustomEntity.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\InteractionStack.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Inventory.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Item.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\ItemInventory.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\NPC.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\EntityDataHandler.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\MeshHandler.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Entity.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\EntityManager.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\HitBox.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Player.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Position3D.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Light.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\LoadOBJ.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\LoadTGA.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Material.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Mesh.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\MeshBuilder.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Application.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Scene.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\shader.hpp" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Utility.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Vertex.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Weapon.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\WeaponInventory.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\WorldObject.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\SceneAssignment2.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Game.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Camera.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\UIManager.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Button.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Text.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\UIItem.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ButtonManager.h" >
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
