main scene world

--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -103,6 +103,9 @@
     <ClCompile Include="Source\WeaponInventory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Scene2021.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\shader.hpp">
@@ -217,6 +220,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\WorldObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Scene2021.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
