Added SceneGarage stuff

--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -109,6 +109,9 @@
     <ClCompile Include="Source\Scene2021.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\SceneGarage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\shader.hpp">
@@ -229,6 +232,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\SceneGunShop.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\SceneGarage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
