Irrklang Hook Implementation

--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -112,6 +112,7 @@
     <ClCompile Include="Source\SceneGarage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\AudioHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\shader.hpp">
@@ -237,6 +238,7 @@
     <ClInclude Include="Source\SceneGarage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\AudioHandler.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
