--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -235,10 +235,10 @@
     <ClInclude Include="Source\Vertex.h">
       <Filter>Header Files\Managers</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Game.h">
-      <Filter>Source Files\Managers</Filter>
-    </ClInclude>
     <ClInclude Include="Source\AudioHandler.h" />
+    <ClInclude Include="Source\Game.h">
+      <Filter>Header Files\Managers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
