--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -37,9 +37,6 @@
     <ClCompile Include="Source\GarageInventory.cpp">
       <Filter>Source Files\Managers</Filter>
     </ClCompile>
-    <ClCompile Include="Source\InteractionStack.cpp">
-      <Filter>Source Files\Managers</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Inventory.cpp">
       <Filter>Source Files\Managers</Filter>
     </ClCompile>
@@ -113,6 +110,10 @@
       <Filter>Source Files\Managers</Filter>
     </ClCompile>
     <ClCompile Include="Source\AudioHandler.cpp" />
+    <ClCompile Include="Source\InteractionManager.cpp" />
+    <ClCompile Include="Source\InteractionQueue.cpp">
+      <Filter>Source Files\Managers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -131,9 +132,6 @@
       <Filter>Header Files\Managers</Filter>
     </ClInclude>
     <ClInclude Include="Source\Interactions.h">
-      <Filter>Header Files\Managers</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\InteractionStack.h">
       <Filter>Header Files\Managers</Filter>
     </ClInclude>
     <ClInclude Include="Source\Inventory.h">
@@ -237,6 +235,10 @@
     </ClInclude>
     <ClInclude Include="Source\AudioHandler.h" />
     <ClInclude Include="Source\Game.h">
+      <Filter>Header Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\InteractionManager.h" />
+    <ClInclude Include="Source\InteractionQueue.h">
       <Filter>Header Files\Managers</Filter>
     </ClInclude>
   </ItemGroup>
