AudioHandler Implementation, GitIgnore Fixes for irrklang dll files, Fixed initial scene collision issue (All objects collide at init)

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ bin/
 *.suo
 *.user
 ipch/
+!*/Debug/irrKlang.dll
+!*/Debug/ikpMP3.dll
+!*/Debug/ikpFlac.dll
+!*/Debug/glew32.dll
+!*/Debug/irrKlang.exp
+!*/Debug/irrKlang.lib
