--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -113,6 +113,7 @@
       <Filter>Source Files\Managers</Filter>
     </ClCompile>
     <ClCompile Include="Source\AudioHandler.cpp" />
+    <ClCompile Include="Source\InteractionManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -239,6 +240,7 @@
     <ClInclude Include="Source\Game.h">
       <Filter>Header Files\Managers</Filter>
     </ClInclude>
+    <ClInclude Include="Source\InteractionManager.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
