--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Source\CustomEntity.cpp" />
     <ClCompile Include="Source\GarageInventory.cpp" />
     <ClCompile Include="Source\InteractionManager.cpp" />
+    <ClCompile Include="Source\InteractionQueue.cpp" />
     <ClCompile Include="Source\InteractionStack.cpp" />
     <ClCompile Include="Source\Inventory.cpp" />
     <ClCompile Include="Source\Item.cpp" />
@@ -192,9 +193,9 @@
     <ClInclude Include="Source\Car.h" />
     <ClInclude Include="Source\GarageInventory.h" />
     <ClInclude Include="Source\InteractionManager.h" />
+    <ClInclude Include="Source\InteractionQueue.h" />
     <ClInclude Include="Source\Interactions.h" />
     <ClInclude Include="Source\CustomEntity.h" />
-    <ClInclude Include="Source\InteractionStack.h" />
     <ClInclude Include="Source\Inventory.h" />
     <ClInclude Include="Source\Item.h" />
     <ClInclude Include="Source\ItemInventory.h" />
